Youtube Video size fixed. for some reason the container sizes break on instant screen change. need fixing.

--- a/andramediandesign/src/index.css
+++ b/andramediandesign/src/index.css
@@ -50,3 +50,108 @@ h5{
 }
 
 
+@media screen and (max-width: 1920px) {
+  h1 {
+      font-size: 60px !important;
+      line-height: 64px !important;
+  }
+}
+@media screen and (max-width: 1279px) {
+  /* h1 {
+      font-size: 60px !important;
+      line-height: 64px !important;
+  } */
+  h2 {
+      font-size: 36px !important;
+      line-height: 40px !important;
+  }
+  h3 {
+      font-size: 32px !important;
+      line-height: 46px !important;
+  }
+  h4 {
+      font-size: 26px !important;
+      line-height: 30px !important;
+  }
+  h6 {
+      font-size: 16px !important;
+      line-height: 20px !important;
+  }
+  p {
+      font-size: 14px !important;
+      line-height: 18px !important;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  h1 {
+      font-size: 50px !important;
+      line-height: 58px !important;
+  }
+  h2 {
+      font-size: 36px !important;
+  }
+  h3 {
+      font-size: 32px !important;
+  }
+  h5 {
+      font-size: 19px !important;
+      line-height: 24px !important;
+  }
+  h6 {
+      font-size: 16px !important;
+  }
+  p {
+      font-size: 14px !important;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  h1 {
+      font-size: 44px !important;
+      line-height: 48px !important;
+  }
+  h2 {
+      font-size: 26px !important;
+      line-height: 30px !important;
+  }
+  h3 {
+      font-size: 22px !important;
+      line-height: 25px !important;
+  }
+  h4 {
+      font-size: 16px !important;
+      line-height: 19px !important;
+  }
+  h5 {
+      font-size: 14px !important;
+      line-height: 19px !important;
+  }
+  h6 {
+      font-size: 14px !important;
+      line-height: 18px !important;
+  }
+  p {
+      font-size: 12px !important;
+      line-height: 15px !important;
+  }
+}
+
+@media screen and (max-height: 780px) {
+  h2 {
+      font-size: 26px !important;
+  }
+  h3 {
+      font-size: 22px !important;
+  }
+  h6 {
+      font-size: 14px !important;
+  }
+  h4 {
+      font-size: 16px !important;
+  }
+  p {
+      font-size: 9px !important;
+  }
+}
+
